bk_ida/gccida/c3/dump_node
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1229:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1231:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1232:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1241:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1248:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1293:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v77; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1457:34: error: use of undeclared identifier 'off_71BF47'
fprintf( v198.stream, "%-13s ", &off_71BF47); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1471:22: error: expected expression
v25 = *( tree_node **)( key + 64); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1471:10: error: use of undeclared identifier 'tree_node'
v25 = *( tree_node **)( key + 64); 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1495:23: error: use of undeclared identifier 'off_71BF36'
fprintf( v198.stream, off_71BF36, v24, 6552963LL); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1501:23: error: use of undeclared identifier 'asc_71BF35'
fprintf( v198.stream, asc_71BF35, 25LL, 6552963LL); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1518:22: error: expected expression
v13 = *( tree_node **)( key + 32); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1518:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( key + 32); 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1528:22: error: expected expression
v13 = *( tree_node **)( key + 40); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1528:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( key + 40); 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1540:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
if ( lang_hooks_0.tree_dump.dump_tree( &v198, ( tree)key) ) 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1540:38: error: called object type '<dependent type>' is not a function or function pointer
if ( lang_hooks_0.tree_dump.dump_tree( &v198, ( tree)key) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1544:22: error: expected expression
v13 = *( tree_node **)( key + 8); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/tree-dump.c:1544:10: error: use of undeclared identifier 'tree_node'
v13 = *( tree_node **)( key + 8); 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dump_node/src/obj/tree-dump.o] Error 1
